--- a/.github/workflows/nestjs-ci.yaml
+++ b/.github/workflows/nestjs-ci.yaml
@@ -9,7 +9,6 @@ on:
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     strategy:
       fail-fast: false
       matrix:
@@ -62,7 +61,7 @@ jobs:
           port: ${{ secrets.PORT }}
           script: |
             # 프로젝트 디렉토리로 이동
-            cd /home/ubuntu/ci-cd-test
+            cd /home/ubuntu/asfdaffa
             
             # GitHub에서 최신 코드를 가져옴
             git pull
